7_kubernetes/mlservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlservice-deployment
  labels:
    app: mlservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlservice
  template:
    metadata:
      labels:
        app: mlservice
    spec:
      containers:
      - name: mlservice
        image: mlservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        startupProbe:
          httpGet:
            path: /metrics
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 5
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /metrics
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
