7_kubernetes/mlservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlservice-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mlservice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlservice-service
            port:
              number: 8000
